@@ -3,80 +3,85 @@
 
 # NoMagicHTTP
 
-**A server-side Java library used to receive HTTP requests and respond to
-them.**
+**A Java library for receiving HTTP requests and responding to them.**
 
-_The branch `virtual-threads` aims to rewrite this library to use virtual
-threads instead of asynchronous channels to simplify API and implementation as
-well as to potentially gain performance. The documentation on this branch is
-likely out of date._
+The library uses virtual threads ([JEP 425][0-1]), meaning that the dependent
+application writes "straightforward blocking code", yet reaps "near-optimal
+hardware utilization".
 
-The API is _elegant_ and based on the firmly held belief that all forms of magic
-are evil. Reflection code, error-prone annotations, missing "beans" and God-like
-"context" objects will never be a part of the library. The source code is
-crafted by artsmen seeking perfection through simplicity, developer happiness,
-and a minimal waste of time.
+The API is _elegant_, and based on the firmly held belief that magic is evil.
+Reflection code, error-prone annotations, missing "beans" and God-like,
+ill-defined "context" objects will never be a part of the library. The source
+code is crafted by artsmen seeking perfection through simplicity, developer
+happiness, and a minimal waste of time.
 
-The NoMagicHTTP server is natively asynchronous. The server doesn't even use
-event polling or selector threads. The library codebase is written in 100%
-non-native Java code, and is almost fully non-blocking*. What you get is a
-server as fast and scalable as any cross-platform JDK-based HTTP server
-implementation could possibly be.
+What you get is a server as fast and scalable as any cross-platform JDK-based
+HTTP server implementation could possibly be.
 
-*the only methods that _may_ block are those related to a channel's life-cycle
-(by design).
+[All-you-need JavaDoc is here.][0-2]
 
-[All-you-need JavaDoc is here.][0-1]
+**WARNING:** This project is in an alpha phase without proper release
+management/versioning. The document [POA.md][0-3] details planned future work,
+and consequently, what parts of the HTTP stack have not yet been delivered.
 
-**WARNING:** This project is fresh out of the oven without proper release
-management in place and likely not very useful at the moment. The document
-[POA.md][0-2] details planned future work- and consequently, what parts of the
-HTTP stack have not yet been delivered.
-
-[0-1]: https://jitpack.io/com/github/martinandersson/nomagichttp/-SNAPSHOT/javadoc/
-[0-2]: POA.md
+[0-1]: https://openjdk.org/jeps/425
+[0-2]: https://jitpack.io/com/github/martinandersson/nomagichttp/api/-SNAPSHOT/javadoc/alpha.nomagichttp/alpha/nomagichttp/HttpServer.html
+[0-3]: POA.md
 
 ## Minimal Example
 
 In an empty directory, create a new [Gradle][1-1] build file `build.gradle`:
 
-    plugins {
-        id 'application'
+```groovy
+plugins {
+    id('application')
+}
+
+repositories {
+    maven {
+        url('https://jitpack.io')
     }
-    
-    repositories {
-        maven { url 'https://jitpack.io' }
-    }
-    
-    dependencies {
-        implementation 'com.github.martinandersson:nomagichttp:master-SNAPSHOT'
-    }
-    
-    application {
-        mainClass = 'Greeter'
-    }
+}
+
+dependencies {
+    implementation('com.github.martinandersson:nomagichttp:master-SNAPSHOT')
+}
+
+application {
+    mainClass = 'Greeter'
+    // This is for the server implementation to work
+    applicationDefaultJvmArgs = [
+        '--enable-preview',
+        '--add-modules', 'jdk.incubator.concurrent']
+}
+```
 
 In subfolder `src/main/java`, create a new file `Greeter.java`:
 
-    import alpha.nomagichttp.HttpServer;
-    import static alpha.nomagichttp.handler.RequestHandler.GET;
-    import static alpha.nomagichttp.message.Responses.text;
-    
-    class Greeter {
-        public static void main(String[] args) throws java.io.IOException {
-            HttpServer.create()
-                      .add("/greeting", GET().respond(text("Hello Stranger!")))
-                      .start(8080);
-        }
-    }
+```java
+import alpha.nomagichttp.HttpServer;
+import java.io.IOException;
+import static alpha.nomagichttp.handler.RequestHandler.GET;
+import static alpha.nomagichttp.message.Responses.text;
 
-Make sure you are using Java 19+, then start the server:
+class Greeter {
+    public static void main(String[] args) throws IOException, InterruptedException {
+        HttpServer.create()
+                  .add("/greeting",
+                      GET().apply(request -> text("Hello Stranger!")))
+                  .start(8080);
+    }
+}
+```
+
+Make sure you are using at least Gradle 8.2 and Java 20, then start the server:
 
 ```console
-foo@bar:~$ gradle run
+foo@bar:projectfolder$ gradle run
 > Task :run
-Mar 03, 2021 7:29:26 AM alpha.nomagichttp.internal.DefaultServer start
-INFO: Opened server channel: sun.nio.ch.UnixAsynchronousServerSocketChannelImpl[/0:0:0:0:0:0:0:0:8080]
+WARNING: Using incubator modules: jdk.incubator.concurrent
+Jul 15, 2023 5:40:03 PM alpha.nomagichttp.core.DefaultServer lambda$openOrFail$8
+INFO: Opened server channel: sun.nio.ch.ServerSocketChannelImpl[/[0:0:0:0:0:0:0:0]:8080]
 <=========----> 75% EXECUTING [1s]
 > :run
 ```
@@ -84,40 +89,37 @@ INFO: Opened server channel: sun.nio.ch.UnixAsynchronousServerSocketChannelImpl[
 In another terminal:
 
 ```console
-foo@bar:~$  curl localhost:8080/greeting
+foo@bar:projectfolder$  curl localhost:8080/greeting
 Hello Stranger!
 ```
 
-In a real-world scenario where Java is used directly, the start-up time is
-pretty much instantaneous. Be prepared for uber-fast development cycles and
-running real HTTP exchanges in your test cases, _because you can_.
+In a real-world scenario where the Java runtime is used to start the
+application, the start-up time is pretty much instantaneous. Be prepared for
+uber-fast development cycles and running real HTTP exchanges in your test cases,
+_because you can_ 🎉🙌.
 
 [1-1]: https://docs.gradle.org/current/userguide/tutorial_using_tasks.html
 
-## Getting started
+## Getting Started
 
-The intent of this project is to be primarily documented through [JavaDoc][0-1]
-of an API that is _discoverable_ and intuitive.
-
-The examples provided in subsequent sections are packaged with the published JAR
-file and can be executed simply by replacing the `mainClass` value in the
-previous Gradle build file. I.e., to run the first example, do:
-
-    application {
-        mainClass = 'alpha.nomagichttp.examples.HelloWorld'
-    }
-
-For brevity, the example runs provided below does not use Gradle and assume that
-the JAR file path and package have been provided by two environment variables
-instead.
-
-    JAR=build/libs/nomagichttp-0.5-SNAPSHOT.jar
-    PKG=alpha.nomagichttp.examples
+The NoMagicHTTP library is documented through detailed and exhaustive JavaDoc of
+an API that is discoverable and intuitive. JavaDoc _is the contract_. Anything
+one reads outside of JavaDoc, is _advisory_ only.
 
 It is recommended to follow the links in each example as the source code
 contains useful commentary that explains the API used.
 
-[2-1]: src/main/java/alpha/nomagichttp/package-info.java
+The examples provided in subsequent sections, are packaged with the published
+JAR and can be executed simply by replacing the `mainClass` value in the
+previous Gradle build file.
+
+To run the first example below, simply replace the class reference:
+
+```groovy
+application {
+    mainClass = 'alpha.nomagichttp.examples.HelloWorld'
+}
+```
 
 ### Selecting port
 
@@ -128,14 +130,14 @@ See code: [src/main/java/.../HelloWorld.java][3-1]
 Run:
 
 ```console
-foo@bar:~$ java --class-path=$JAR $PKG.HelloWorld
-Listening on port 52063.
+foo@bar:projectfolder$ gradle run
+Listening on port 40863.
 ```
 
 Make a request to the port in a new terminal window:
 
 ```console
-foo@bar:~$ curl -i localhost:52063/hello
+foo@bar:~$ curl -i localhost:40863/hello
 HTTP/1.1 200 OK
 Content-Type: text/plain; charset=utf-8
 Content-Length: 12
@@ -143,7 +145,7 @@ Content-Length: 12
 Hello World!
 ```
 
-[3-1]: src/main/java/alpha/nomagichttp/examples/HelloWorld.java
+[3-1]: api/src/main/java/alpha/nomagichttp/examples/HelloWorld.java
 
 ### Greet using name from request path
 
@@ -155,14 +157,14 @@ See code: [src/main/java/.../GreetParameter.java][4-1]
 Run:
 
 ```console
-foo@bar:~$ java --class-path=$JAR $PKG.GreetParameter
+foo@bar:projectfolder$ gradle run
 Listening on port 8080.
 ```
 
 In a new terminal, run:
 
 ```console
-foo@bar:~$ curl -i localhost:8080/hello/John
+foo@bar:projectfolder$ curl -i localhost:8080/hello/John
 HTTP/1.1 200 OK
 Content-Type: text/plain; charset=utf-8
 Content-Length: 11
@@ -173,10 +175,10 @@ Hello John!
 Alternatively, you may pass the name as a query parameter:
 
 ```console
-foo@bar:~$ curl -i localhost:8080/hello?name=John
+foo@bar:projectfolder$ curl -i localhost:8080/hello?name=John
 ```
 
-[4-1]: src/main/java/alpha/nomagichttp/examples/GreetParameter.java
+[4-1]: api/src/main/java/alpha/nomagichttp/examples/GreetParameter.java
 
 ### Greet using name from request body
 
@@ -187,14 +189,14 @@ See code: [src/main/java/.../GreetBody.java][5-1]
 Run:
 
 ```console
-foo@bar:~$ java --class-path=$JAR $PKG.GreetBody
+foo@bar:projectfolder$ gradle run
 Listening on port 8080.
 ```
 
 In a new terminal, run:
 
 ```console
-foo@bar:~$ curl -i localhost:8080/hello -d John
+foo@bar:projectfolder$ curl -i localhost:8080/hello -d John
 HTTP/1.1 200 OK
 Content-Type: text/plain; charset=utf-8
 Content-Length: 11
@@ -202,7 +204,7 @@ Content-Length: 11
 Hello John!
 ```
 
-[5-1]: src/main/java/alpha/nomagichttp/examples/GreetBody.java
+[5-1]: api/src/main/java/alpha/nomagichttp/examples/GreetBody.java
 
 ### Echo request headers
 
@@ -213,31 +215,31 @@ See code: [src/main/java/.../EchoHeaders.java][6-1]
 Run:
 
 ```console
-foo@bar:~$ java --class-path=$JAR $PKG.EchoHeaders
+foo@bar:projectfolder$ gradle run
 Listening on port 8080.
 ```
 
 In a new terminal, run:
 
 ```console
-foo@bar:~$ curl -i localhost:8080/echo \
+foo@bar:projectfolder$ curl -i localhost:8080/echo \
     -H "My-Header: Value 1" \
     -H "My-Header: Value 2"
 HTTP/1.1 204 No Content
-Accept: */*
 Host: localhost:8080
+User-Agent: curl/7.81.0
+Accept: */*
 My-Header: Value 1
 My-Header: Value 2
-User-Agent: curl/7.68.0
 ```
 
-[6-1]: src/main/java/alpha/nomagichttp/examples/EchoHeaders.java
+[6-1]: api/src/main/java/alpha/nomagichttp/examples/EchoHeaders.java
 
 ### Keep client informed
 
-A final response may be preceeded by any number of interim 1XX (Informational)
+A final response may be preceded by any number of interim 1XX (Informational)
 responses. This is an excellent way to keep the client informed while processing
-lengthy requests (without the need for server-sent events, websockets, long
+lengthy requests (without the need for server-sent events, web sockets, long
 polling, et cetera).
 
 See code: [src/main/java/.../KeepClientInformed.java][7-1]
@@ -245,14 +247,14 @@ See code: [src/main/java/.../KeepClientInformed.java][7-1]
 Run:
 
 ```console
-foo@bar:~$ java --class-path=$JAR $PKG.KeepClientInformed
+foo@bar:projectfolder$ gradle run
 Listening on port 8080.
 ```
 
 In a new terminal, run:
 
 ```console
-foo@bar:~$ curl -i localhost:8080
+foo@bar:projectfolder$ curl -i localhost:8080
 HTTP/1.1 102 Processing
 Time-Left: 3 second(s)
 
@@ -265,4 +267,4 @@ Time-Left: 1 second(s)
 HTTP/1.1 204 No Content
 ```
 
-[7-1]: src/main/java/alpha/nomagichttp/examples/KeepClientInformed.java
+[7-1]: api/src/main/java/alpha/nomagichttp/examples/KeepClientInformed.java
